# gravity-link

./: .gitignore  README.md  pyproject.toml  verification.md
.gravity_link/: workspace_state.json
examples/: demo_agent.py
src/: dependencies.py  file_watcher.py  main.py  pty_manager.py  sdk_wrapper.py  state_manager.py
src/routers/: agent.py  approval.py  conversation.py  workspace.py
src/static/: app.js  index.html  style.css
src/static/css/: components.css  layout.css  markdown.css  variables.css
src/static/js/: api.js  chat.js  explorer.js  terminal.js
tests/: test_sdk_wrapper.py  test_server.py
workspace/: pending_approval.json  recent_workspaces.json  workspace_state.json
